# compliant_mechanism_synthesis

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
src/compliant_mechanism_synthesis/: __init__.py  adjacency.py  cli.py  common.py  data.py  design.py  mechanics.py  model.py  repertoire.py  roles.py  scaling.py  tensor_ops.py  viz.py
src/compliant_mechanism_synthesis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/compliant_mechanism_synthesis/cli/: __init__.py  common.py  dataset_generate.py  dataset_visualize.py  generate_dataset.py  sample.py  sample_supervised.py  train.py  train_rl.py  train_rl_optimizer_supported.py  train_supervised.py  upgrade_supervised_checkpoint.py  visualize_dataset.py
src/compliant_mechanism_synthesis/dataset/: __init__.py  offline.py  optimization.py  primitives.py  types.py
src/compliant_mechanism_synthesis/evaluation/: __init__.py  refinement.py
src/compliant_mechanism_synthesis/losses/: __init__.py  stiffness.py  structural.py
src/compliant_mechanism_synthesis/mechanics/: __init__.py  frame3d.py
src/compliant_mechanism_synthesis/models/: __init__.py  refiner.py
src/compliant_mechanism_synthesis/training/: __init__.py  data.py  rl.py  rl_optimizer_supported.py  supervised.py  unified.py
src/compliant_mechanism_synthesis/utils/: __init__.py  cli.py
src/compliant_mechanism_synthesis/visualization/: __init__.py  dataset.py  plots.py  supervised.py
tests/: test_cli.py  test_dataset_pipeline.py  test_dataset_roundtrip.py  test_design.py  test_frame3d.py  test_graph_attention_block.py  test_local_geometry_encoder.py  test_mechanics.py  test_model.py  test_rl_optimizer_supported_training.py  test_rl_training.py  test_supervised_interface.py  test_supervised_training.py  test_training_data.py  test_types.py  test_unified_training.py
