[project]
name = "compliant-mechanism-synthesis"
version = "0.1.0"
description = "First prototype for compliant mechanism synthesis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.9",
  "numpy>=1.26",
  "pytest>=8.3",
  "scipy>=1.13",
  "tensorboard>=2.16",
  "torch>=2.3",
]

[project.scripts]
cms-dataset-generate = "compliant_mechanism_synthesis.cli:dataset_generate_main"
cms-sample = "compliant_mechanism_synthesis.cli:sample_supervised_main"
cms-train-rl = "compliant_mechanism_synthesis.cli:train_rl_main"
cms-train-supervised = "compliant_mechanism_synthesis.cli:train_supervised_main"
cms-upgrade-supervised-checkpoint = "compliant_mechanism_synthesis.cli:upgrade_supervised_checkpoint_main"
cms-dataset-visualize = "compliant_mechanism_synthesis.cli:visualize_dataset_main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
